gitops/istio/infrastructure/istio-ingress-gateway/virtualservice-routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apps-helloworld
  namespace: istio-system
spec:
  hosts:
  - "helloworld.batatinha.com"
  gateways:
  - istio-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apps-helloworld.apps.svc.cluster.local
